navbar is now absolutely positioned and about page spacing is fixed according to it

--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -1,6 +1,8 @@
 .navbar{
     padding: 2rem 5rem;
-    position: relative;
+    position: absolute;
+    top: 0;
+    width: 100%;
     z-index: 9999999;
 }
 .toggle{
