--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,9 +1,11 @@
 .about_us section{
-    margin: 6.5rem 0;
+    margin: 2.5rem 0;
+    padding-top: 7rem;
 }
 @media screen and (max-width:768px) {
     .about_us section{
-        margin: 4.5rem 0;
+        margin: 2rem 0;
+        padding-top: 5.5rem;
     }
 }
 /* Header */
